# basic-files

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  Cargo.toml  Directory.Build.props  Dockerfile  README.md  basic-files.sln  example.sqlite3  file.csv  rollout-2026-05-25T17-03-31-019e5fe0-8b3c-77d0-b5ef-1a3df593677b.jsonl
projects/cmake/: CMakeLists.txt  README.md  math.cmake
projects/cmake/src/: main.c
projects/csharp/: App.cs  Program.cs  README.md
projects/dart/: README.md  pubspec.yaml
projects/dart/.dart_tool/: package_config.json  package_graph.json
projects/dart/.dart_tool/extension_discovery/: devtools.json
projects/dart/lib/: dart_example.dart  main.dart
projects/go/: README.md  go.mod  main.go
projects/java/: README.md
projects/java/src/main/java/dev/basicfiles/: App.java
projects/kotlin/: README.md
projects/kotlin/src/main/kotlin/: Main.kt
projects/php/: README.md
projects/php/public/: index.php
projects/python/: README.md  pyproject.toml
projects/python/src/: basic_files.py
projects/ruby/: README.md
projects/ruby/lib/: basic_files.rb
projects/rust/: Cargo.toml  README.md
projects/rust/src/: lib.rs  main.rs
projects/swift/: Package.swift  README.md
projects/swift/Sources/BasicFiles/: main.swift
projects/todo-board/: README.md  index.html  main.js  styles.css
projects/todo-board/src/: data.js
projects/typescript/: README.md  package.json
projects/typescript/src/: lib.ts  main.ts
projects/web-app/: README.md  index.html  main.js  styles.css
projects/zig/: README.md  build.zig
projects/zig/src/: main.zig
standalone/: .env.example  .gitattributes  .mailmap  CMakeCache.txt  COMMIT_EDITMSG  Dockerfile  Dockerfile.bash  Makefile  README.md  TaskCard.svelte  actionscript.as  ada.adb  apache.conf  api.graphql  app.properties  applescript.applescript  arm.s  asp.asp  assembly.asm  authorized_keys  awk.awk  bash.sh  batch.bat  build.cabal  build.gradle.kts  c.c  camlp4.ml  certificate.pem  cfml.cfm  clojure.clj  cmake-config.h.in  cmake-config.hpp.in  cmake.cmake  coffeescript.coffee  command.help  component.vue  config.jsonnet  config.toml  config.yaml  cpp.cpp  (+158 more)
